# oss-taapp

./: .env.example  .gitignore  GENERATED_CLIENT.md  README.md  main.py  mkdocs.yml  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: circleci-setup.md  component.md  index.md  testing.md
docs/api/: gmail_client_impl.md  gmail_message_impl.md  mail_client_api.md  message.md
scripts/: generate_client.py
src/gmail_client_impl/: README.md  pyproject.toml
src/gmail_client_impl/src/gmail_client_impl/: __init__.py  _impl.py  gmail_impl.py  message_impl.py
src/gmail_client_impl/tests/: __init__.py  test_authentication.py  test_core_methods.py  test_gmail_message_edge_cases.py  test_gmail_message_impl.py  test_registration.py
src/gmail_message_impl/: README.md  pyproject.toml
src/gmail_message_impl/src/gmail_message_impl/: __init__.py  _impl.py
src/gmail_message_impl/tests/: __init__.py  test_edge_cases.py  test_gmail_message.py
src/mail_client_adapter/src/mail_client_adapter/: __init__.py  generated_wrapper.py  main.py
src/mail_client_api/: README.md  pyproject.toml
src/mail_client_api/src/mail_client_api/: __init__.py  client.py  message.py
src/mail_client_api/tests/: __init__.py  test_mail_client_api.py  test_message_abstraction.py
src/mail_client_services/: README.md
src/mail_client_services/src/: main.py
src/mail_client_services/tests/: __init__.py  test_service.py
src/message/: README.md  pyproject.toml
src/message/src/message/: __init__.py
src/message/tests/: __init__.py  test_message.py
tests/: __init__.py
tests/e2e/: __init__.py  test_main_application.py
tests/integration/: __init__.py  test_client_integration.py
