[project]
name = "gmail-client-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.177.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "mail-client-api",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests", "src"]
addopts = ["--cov", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", ]

[tool.coverage.report]
fail_under = 85 # Justification: A high threshold ensures most code is tested.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100  # Default formatting width
target-version = "py311"  # Adjust based on actual Python version
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

[tool.uv.sources]
mail-client-api = { workspace = true }
