[project]
name = "mail-client-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100  # Default formatting width
target-version = "py311"  # Adjust based on actual Python version
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []

