[project]
name = "message"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100  # Default formatting width
target-version = "py311"  # Adjust based on actual Python version
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = [
    "W293", # Whitespaces are ok in documentation lines
    "T201", # Print statements are fine to use in this package
    "FBT001", # Boolean-typed positional argument in function definition (interactive flag is clear)
    "FBT002", # Boolean default positional argument in function definition (interactive flag is clear)
    "C901", # Function is too complex (authentication logic inherently complex)
    "PLR0912", # Too many branches (authentication logic has many paths)
    "PLR0915", # Too many statements (authentication setup requires many steps)
    "S105", # Possible hardcoded password (false positive for file paths like "token.json")
    "BLE001", # Do not catch blind exception (intentional for graceful error handling)
    "D203", # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `incorrect-blank-line-before-class`.
    "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
    "S101", # Assertions are valid
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"